namespace Others
{
    public static class Constant
    {
        public const string ANIM_RUN = "run";
        public const string ANIM_IDLE = "idle";
        public const string ANIM_ATTACK = "attack";
        public const string TAG_PLAYER = "Player";
        public const string TAG_ENEMY = "Enemy";
        public const string TAG_BRICK = "Brick";
        public const string TAG_WALL = "Wall";
    }
}
